# 92AKAndroidExamples

./: README.md
JNIExample/: local.properties
JNIExample/app/: .gitignore  build.gradle
JNIExample/app/src/androidTest/java/com/ntak/examples/jniexample/: ExampleInstrumentedTest.java
JNIExample/app/src/main/: AndroidManifest.xml
JNIExample/app/src/main/cpp/: CMakeLists.txt
JNIExample/app/src/main/cpp/lib/PNGLib/cpp/: GenUtils.cpp  PNGComparison.cpp  PNGMetaDataFormatter.cpp  PNGStructs.cpp
JNIExample/app/src/main/cpp/lib/PNGLib/headers/: GenUtils.hpp  PNGComparison.hpp  PNGMetaDataFormatter.hpp  PNGStructs.hpp
JNIExample/app/src/main/cpp/src/archive/: imgManipExample.cpp  imgManipExample.hpp  imgManipExample_bloat.cpp
JNIExample/app/src/main/cpp/src/imgManipExample/: imgManipExample.cpp  imgManipExample.hpp
JNIExample/app/src/main/cpp/test/Collections/: ContiguousStreamTest.cpp  ContiguousStreamTest.hpp
JNIExample/app/src/main/java/com/ntak/examples/jniexample/: com_ntak_examples_jniexample_application_MainActivity.h  com_ntak_examples_jniexample_subscriber_BackgroundRenderResourceSubscriber.h
JNIExample/app/src/main/java/com/ntak/examples/jniexample/application/: GlobalBus.java  MainActivity.java
JNIExample/app/src/main/java/com/ntak/examples/jniexample/builder/: BundleBuilder.java  MapBuilder.java
JNIExample/app/src/main/java/com/ntak/examples/jniexample/event/: LocalImgManipEvent.java  ViewEnableEvent.java
JNIExample/app/src/main/java/com/ntak/examples/jniexample/subscriber/: BackgroundRenderResourceSubscriber.java  Subscriber.java
JNIExample/app/src/main/res/layout/: activity_main.xml
JNIExample/app/src/main/res/values/: strings.xml
JNIExample/app/src/test/java/com/ntak/examples/jniexample/: ExampleUnitTest.java
JobSchedulerExample/app/src/androidTest/java/com/ntak/examples/jobschedulerexample/: ApplicationTest.java
JobSchedulerExample/app/src/main/: AndroidManifest.xml
JobSchedulerExample/app/src/main/java/com/ntak/examples/jobschedulerexample/application/: GlobalBus.java  MainActivity.java
JobSchedulerExample/app/src/main/java/com/ntak/examples/jobschedulerexample/builder/: BundleBuilder.java
JobSchedulerExample/app/src/main/java/com/ntak/examples/jobschedulerexample/subscriber/: BackgroundRenderResourceSubscriber.java  NetworkSubscriber.java  Subscriber.java
JobSchedulerExample/app/src/main/res/layout/: activity_main.xml
JobSchedulerExample/app/src/main/res/values/: colors.xml  strings.xml
JobSchedulerExample/app/src/test/java/com/ntak/examples/jobschedulerexample/: ExampleUnitTest.java
JobSchedulerExample/codeiris/: codeIrisExport.json
JobSchedulerExample/gradle/wrapper/: gradle-wrapper.properties
SingleQueueJobSchedulerExample/app/: build.gradle  proguard-rules.pro
SingleQueueJobSchedulerExample/app/src/main/java/com/ntak/examples/jobschedulerexample/application/: GlobalBus.java  MainActivity.java
SingleQueueJobSchedulerExample/app/src/main/java/com/ntak/examples/jobschedulerexample/builder/: MapBuilder.java
SingleQueueJobSchedulerExample/app/src/main/java/com/ntak/examples/jobschedulerexample/event/: LocalImgManipEvent.java  NetworkDownloadEvent.java  ViewEnableEvent.java
SingleQueueJobSchedulerExample/app/src/main/java/com/ntak/examples/jobschedulerexample/service/: NetworkService.java
SingleQueueJobSchedulerExample/app/src/main/java/com/ntak/examples/jobschedulerexample/subscriber/: BackgroundRenderResourceSubscriber.java  NetworkSubscriber.java
SingleQueueJobSchedulerExample/app/src/main/res/values/: strings.xml
